[gd_scene load_steps=2 format=2]

[ext_resource path="res://common/ShopItem.gd" type="Script" id=1]

[node name="ShopItem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
process_priority = 5
margin_top = -16.0
margin_right = 36.0
margin_bottom = 4.0
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 1
text = "Buy"

[node name="RedPrice" type="Label" parent="."]
margin_top = 25.0
margin_right = 40.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "100"

[node name="BluePrice" type="Label" parent="."]
margin_top = 39.0
margin_right = 40.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "100"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
